-Built API for calendar -Reorg files/folder

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
   </script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
   </script>
@@ -28,6 +29,7 @@
 
   <link href='https://cdn.jsdelivr.net/npm/fullcalendar@5.2.0/main.css' rel='stylesheet' />
   <script src='https://cdn.jsdelivr.net/npm/fullcalendar@5.2.0/main.js'></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 </head>
 
@@ -109,14 +111,14 @@
         <div class="row section4IconRow">
           <div class="col-md-4 roosterIconContainer">
             <div class="roosterIcon">
-              <img src="./front-end-dev-test-assets/1.png" alt="Sun Bathing">
+              <img src="/images/1.png" alt="Sun Bathing">
             </div>
             <p>Sun Bathing</p>
           </div>
           <div class="col-lg-3 col-md-1"></div>
           <div class="col-4 roosterIconContainer">
             <div class="roosterIcon">
-              <img src="./front-end-dev-test-assets/2.png" alt="Dog Bone">
+              <img src="/images/2.png" alt="Dog Bone">
             </div>
             <p>Chewing Dog Bones</p>
           </div>
@@ -124,7 +126,7 @@
         <div class="row section4IconRow">
           <div class="col-4 roosterIconContainer">
             <div class="roosterIcon">
-              <img src="./front-end-dev-test-assets/3.png" alt="Dog Park">
+              <img src="/images/3.png" alt="Dog Park">
             </div>
 
             <p>Dog Park Visits</p>
@@ -132,7 +134,7 @@
           <div class="col-lg-3 col-md-1"></div>
           <div class="col-md-4 roosterIconContainer">
             <div class="roosterIcon">
-              <img src="./front-end-dev-test-assets/4.png" alt="Nap Time">
+              <img src="/images/4.png" alt="Nap Time">
             </div>
             <p>Nap Time</p>
           </div>
@@ -327,16 +329,16 @@
       <div class="col-lg-2 col-md-3 followUs">
 
         <a href="http://www.instagram.com">
-          <img src="./front-end-dev-test-assets/instagram.svg" alt="Visit us at Instagram"></a>
+          <img src="/images/instagram.svg" alt="Visit us at Instagram"></a>
 
-        <a href="http://www.facebook.com"><img src="./front-end-dev-test-assets/facebook.svg"
+        <a href="http://www.facebook.com"><img src="/images/facebook.svg"
             alt="Visit us at Facebook"></a>
 
       </div>
     </div>
   </footer>
 
-  <script src="./src/app.js"></script>
+  <script src="calendar.js"></script>
 </body>
 
 
